--- a/DirectGraphics3D/DirectGraphics3D.vcxproj
+++ b/DirectGraphics3D/DirectGraphics3D.vcxproj
@@ -91,6 +91,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectGraphics3D.cpp" />
+    <ClCompile Include="DirectThreadSafe.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
