--- a/DirectGraphics3D/DirectGraphics3D.vcxproj.filters
+++ b/DirectGraphics3D/DirectGraphics3D.vcxproj.filters
@@ -29,5 +29,11 @@
     <ClCompile Include="DirectGraphics3D.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="DirectThreadSafe.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="ReadMe.txt" />
   </ItemGroup>
 </Project>
