--- a/DirectGraphics3D/DirectGraphics3D.vcxproj
+++ b/DirectGraphics3D/DirectGraphics3D.vcxproj
@@ -88,6 +88,7 @@
     <ClInclude Include="DirectCommon.h" />
     <ClInclude Include="DirectGraphics3D.h" />
     <ClInclude Include="DirectThreadSafe.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectGraphics3D.cpp" />
@@ -95,6 +96,9 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DirectGraphics3D.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
