--- a/DirectGraphics3D/DirectGraphics3D.vcxproj.filters
+++ b/DirectGraphics3D/DirectGraphics3D.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="DirectThreadSafe.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DirectGraphics3D.cpp">
@@ -35,5 +38,10 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="DirectGraphics3D.rc">
+      <Filter>资源文件</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
